# Episteme

./: CMakeLists.txt  Makefile  README.md  logo.txt  nodes.txt
.cache/clangd/index/: avx2.cpp.01262FEE3923E4A9.idx  avx512.cpp.6ADB228F16A27838.idx  bench.h.BEA2D6A80C15D2B0.idx  common.cpp.1AA663AD96A8A7C4.idx  common.h.B59A6A0C821A3962.idx  core.h.BFF283E222E38C9E.idx  datagen.cpp.DFBF707AAFCC0363.idx  datagen.h.F59E5BF36D67AB26.idx  display.cpp.A05E490FD8544CFA.idx  display.h.728121D98847828A.idx  eval.cpp.BB409AB1376BED58.idx  eval.h.03EBB0A77B3DAAF9.idx  format.cpp.1AE467EFE94DFE91.idx  format.h.88334139AC30B57E.idx  generic.cpp.C72B116D29EC04FF.idx  history.h.95BBC96825C569CE.idx  incbin.h.DEE38620B1383B6D.idx  main.cpp.B0FB40251A0EE7CF.idx  move.cpp.E6CC1CFAA61B029D.idx  move.h.CE33B102DEFAF52E.idx  movegen.cpp.FA4A4B7F08188AE0.idx  movegen.h.868190EBC64EE008.idx  perft.cpp.5A28C5E5CDC05143.idx  perft.h.AF92B7D958704CC3.idx  position.cpp.73A380B1881C247A.idx  position.h.6CE73C37431AB622.idx  pretty.cpp.BDF761BE75A38088.idx  pretty.h.145F2C44F5B7AC2E.idx  search.cpp.B08E91661F7718E7.idx  search.h.0F4A906BE755C549.idx  ssse3.cpp.76D371AF382237F9.idx  stack.h.C989095987CB857E.idx  time.cpp.D406870FBA17259C.idx  time.h.44FF7A6E61604C31.idx  ttable.cpp.0152C09F81388EE1.idx  ttable.h.D2BDBFEA08943EEA.idx  tunable.cpp.9D923A11190756CC.idx  tunable.h.5745E49913D1FDE3.idx  uci.cpp.2C6E9AD05BCBBBAD.idx  uci.h.48945A04B8900A7C.idx  (+2 more)
src/: main.cpp
src/engine/: engine.cpp  engine.hpp  manager.cpp  manager.hpp
src/engine/chess/: core.h  core.hpp  move.cpp  move.h  move.hpp  movegen.cpp  movegen.h  movegen.hpp  perft.cpp  perft.h  perft.hpp  position.cpp  position.h  position.hpp  zobrist.cpp  zobrist.h  zobrist.hpp
src/engine/eval/: eval.cpp  eval.h  eval.hpp
src/engine/eval/nn/: avx2.cpp  avx512.cpp  common.cpp  common.h  common.hpp  generic.cpp  ssse3.cpp
src/engine/evaluation/: evaluate.cpp  evaluate.h  nnue.cpp  nnue.h
src/engine/evaluation/nn/: avx2.cpp  avx512.cpp  common.cpp  common.h
src/engine/search/: history.h  history.hpp  latch.hpp  search.cpp  search.h  search.hpp  stack.h  stack.hpp  time.cpp  time.h  time.hpp  ttable.cpp  ttable.h  ttable.hpp
src/engine/uci/: display.cpp  display.h  display.hpp  listener.cpp  listener.hpp  pretty.cpp  pretty.h  pretty.hpp  uci.cpp  uci.h  uci.hpp
src/utils/: bench.h  bench.hpp  datagen.cpp  datagen.h  datagen.hpp  format.cpp  format.h  format.hpp  preprocess.cpp  tunable.cpp  tunable.h  tunable.hpp
